--- a/QuoteGenerator/index.html
+++ b/QuoteGenerator/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quote Generator</title>
     <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=fontawesome.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<script src="script.js"></script>
+    <div class="quote-container" id="quote-container">
+        <!-- Quote element  -->
+        <div class="quote-text">
+            <i class="fas fa-quote-left"></i>
+            <span id="quote">It is in your moments of decision that your destiny is shaped.</span>
+        </div>
+        <!-- Author -->
+        <div class="quote-author">
+            <span id="author">Tony Robbins</span>
+        </div>
+        <!-- Buttons -->
+        <div class="button-container">
+            <button class="send-btn" id="twitter" title="Tweet this">
+                <i class="fab fa-twitter"></i>
+            </button>
+            <button id="new-quote">New Quote</button>
+        </div>
+
+    </div>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
+    <script src="script.js"></script>
 </body>
+
 </html>
